# mgr4smb

./: .env.example  CONTACT_EXTRACTION_TOOL.md  README.md  main_menu.sh  pyproject.toml  test_contact_extractor.py
frontend/: .env.local.example  README.md  chatai.py  pyproject.toml
frontend/templates/: index.html  interface.html
scripts/: README.md  start_frontend.sh  start_main_agent.sh
src/: __init__.py
src/agents/: __init__.py  agent_base.py  agent_registry.py  message_bus.py
src/agents/orchestrator/: __init__.py  orchestrator.py
src/api/: __init__.py  auth.py  main.py  server.py
src/api/middleware/: audit_logger.py  rate_limiter.py
src/config/: settings.py
src/config copy/: __init__.py  settings.py
src/data/: appointments.csv  contacts.csv  properties.csv  quotes.csv  test_questions.csv  visits.csv
src/models/: agent_prompt.py  conversation.py  conversation_state.py  embedding.py
src/services/: __init__.py  conversation_analytics.py  conversation_state_manager.py  llm_service.py  resume_service.py
src/utils/: __init__.py  appointments_manager.py  contact_extractor.py  csv_contact_manager.py  properties_manager.py  quotes_manager.py  visits_manager.py
src/workers/db_worker/: __init__.py  agent_prompt_repo.py  conversation_repo.py  conversation_state_repo.py  embedding_repo.py  mongo_client.py
src/workers/ghl_worker/: __init__.py  ghl_client.py
src/workers/knowledge_worker/: __init__.py  knowledge_client.py  knowledge_enrichment.py
